# src/controllers/district.controller.js
@@ -1,15 +1,33 @@
-import Province from '../models/province.model';
+import District from '../models/district.model';
+import functions from '../utils/functions';
 
 export const getDistricts = async (req, res) => {
     const { provinceId } = req.query
     try {
+        let totalData = 0
         let districts = []
+        let nextPage = ''
         if (provinceId !== undefined) {
-            districts = await Province.findAll({ where: { provinceId: provinceId } });
+            totalData = await District.count({ where: { provinceId: provinceId } })
         } else {
-            districts = await Province.findAll({});
+            totalData = await District.count()
         }
-        res.status(200).json(districts);
+        const pagination = req.query.pagination || 1
+        const limit = req.query.limit || 10
+        const { start, maxPagination, next } = functions.getPaginationInfo({ pagination, limit, totalCount: totalData, url: 'districts' })
+        // last pagination
+        if (maxPagination < pagination) {
+            res.status(200).json({ next: '', limit, pagination, data: [] });
+            return
+        }
+        nextPage = next
+        if (provinceId !== undefined) {
+            districts = await District.findAll({ where: { provinceId: provinceId }, offset: start, limit });
+            nextPage += `provinceId=${provinceId}`
+        } else {
+            districts = await District.findAll({ offset: start, limit });
+        }
+        res.status(200).json({ next: nextPage, limit, pagination, data: districts });
     } catch (error) {
         res.status(500).json({
             message: 'Database error',
