# src/controllers/patient.controller.js
@@ -1,8 +1,6 @@
-import Location from "../models/location.model";
 import Patient from "../models/patient.model";
-import Referred from "../models/referred.model";
 
-export const addPatient = async (req, res) => {
+export const add = async (req, res) => {
     const {
         firstName,
         lastName,
@@ -10,14 +8,10 @@ export const addPatient = async (req, res) => {
         birthdate,
         address,
         gender,
-        diagnostic,
-        anamnesis,
-        department,
-        province,
-        district
+        districtId
     } = req.body;
 
-    if (!firstName || !lastName || !documentNumber || !birthdate || !address || !gender) {
+    if (!firstName || !lastName || !documentNumber || !birthdate || !address || !gender || !districtId) {
         return res.status(400).json({ message: 'Some data is missing' });
     }
 
@@ -28,40 +22,65 @@ export const addPatient = async (req, res) => {
             }
         });
 
-        if (!patient) {
+        if (patient)
+            throw "Patient existed"
 
-            let location = await Location.findOne({
-                where: { district }
-            });
-
-            if (!location) {
-                location = await Location.create({
-                    department,
-                    province,
-                    district
-                });
-            }
-
-            patient = await Patient.create({
-                firstName,
-                lastName,
-                documentNumber,
-                birthdate,
-                address,
-                locationId: location.id,
-                gender
-            });
-        }
-
-        await Referred.create({
-            userId: req.user.id,
-            patientId: patient.id,
-            diagnostic,
-            anamnesis
+        patient = await Patient.create({
+            firstName,
+            lastName,
+            documentNumber,
+            birthdate,
+            address,
+            districtId,
+            gender
         });
 
         res.status(201).json({
             message: 'Patient created successfully',
+        });
+
+    } catch (error) {
+        res.status(500).json({
+            message: error,
+        });
+    }
+}
+
+export const getAll = async (req, res) => {
+    const { docNumber } = req.query
+    try {
+        let patients = []
+        if (docNumber !== undefined) patients = await Patient.findAll({ where: { documentNumber: docNumber } })
+        else patients = await Patient.findAll({})
+        res.status(200).json(patients);
+    } catch (error) {
+        console.log('error => ', error)
+        res.status(500).json({
+            message: 'Database error',
+        });
+    }
+}
+
+
+export const getById = async (req, res) => {
+    const { id } = req.params
+    try {
+        const patient = await Patient.findByPk(id)
+        res.status(200).json(patient);
+    } catch (error) {
+        res.status(500).json({
+            message: 'Database error',
+        });
+    }
+}
+
+
+export const deleteById = async (req, res) => {
+    const { id } = req.params
+    try {
+        await Patient.destroy({ where: { id } });
+        res.status(201).json({
+            message: 'Patient deleted successfully',
         });
     } catch (error) {
         res.status(500).json({
@@ -70,17 +89,39 @@ export const addPatient = async (req, res) => {
     }
 }
 
-export const getPatientsReferred = async (req, res) => {
+export const updateById = async (req, res) => {
+    const { id } = req.params
+    const {
+        firstName,
+        lastName,
+        documentNumber,
+        birthdate,
+        address,
+        gender,
+        districtId
+    } = req.body;
+
+    if (!firstName || !lastName || !documentNumber || !birthdate || !address || !gender || !districtId) {
+        return res.status(400).json({ message: 'Some data is missing' });
+    }
 
     try {
-        const referred = await Referred.findAll({
-            include: Patient,
-            where: {
-                userId: req.user.id,
-            }
-        });
+        await Patient.update(
+            {
+                firstName,
+                lastName,
+                documentNumber,
+                birthdate,
+                address,
+                gender,
+                districtId
+            },
+            { where: { id } }
+        );
 
-        res.status(200).json(referred);
+        res.status(201).json({
+            message: 'Patient update successfully',
+        });
 
     } catch (error) {
         res.status(500).json({
