# swagger.json
@@ -9,7 +9,7 @@
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         }
     },
-    "schemes": ["https"],
+    "schemes": ["http"],
     "securityDefinitions": {
         "Bearer":{
             "type": "apiKey",
@@ -30,7 +30,7 @@
         {"name": "Symptoms"},
         {"name": "Diseases"}
     ],
-    "host": "predimed-node.herokuapp.com",
+    "host": "localhost:5001",
     "basePath": "/api/v1",
     "paths" : {
         "/auth/login" : {
@@ -665,6 +665,7 @@
                 "security": [{ "Bearer": [] }],
                 "parameters": [
                     {
+                        "name": "addPatient",
                         "in":"body",
                         "schema": {
                             "$ref": "#/definitions/patientReq"
@@ -693,6 +694,14 @@
                 "tags": ["Patients"],
                 "produces": ["application/json"],
                 "security": [{ "Bearer": [] }],
+                "parameters": [
+                    {
+                    "name": "docNumber",
+                    "in": "query",
+                    "required": false,
+                    "type": "string"
+                    }
+                ],
                 "responses": {
                   "200": {
                     "description": "successful operation",
@@ -712,9 +721,102 @@
                 }
               }
         },
+        "/patients/{id}": {
+            "parameters": [
+              {
+                "name": "id",
+                "in": "path",
+                "required": true,
+                "type": "integer"
+              }
+            ],
+            "delete": {
+              "tags": [
+                "Patients"
+              ],
+              "security": [{ "Bearer": [] }],
+              "responses": {
+                "200": {
+                  "description": "successful operation",
+                  "schema": {
+                    "$ref": "#/definitions/defaultResponse"
+                  }
+                },
+                "400": {
+                    "description": "Invalid status value",
+                    "schema": {
+                        "$ref": "#/definitions/InvalidResponse"
+                    }
+                }
+              }
+            },
+            "get": {
+                "tags": [
+                  "Patients"
+                ],
+                "security": [{ "Bearer": [] }],
+                "responses": {
+                  "200": {
+                    "description": "successful operation",
+                    "schema": {
+                      "$ref": "#/definitions/diseaseRes"
+                    }
+                  },
+                  "400": {
+                      "description": "Invalid status value",
+                      "schema": {
+                          "$ref": "#/definitions/InvalidResponse"
+                      }
+                  }
+                }
+              },
+            "put": {
+              "tags": [
+                "Patients"
+              ],
+              "security": [{ "Bearer": [] }],
+              "parameters": [
+                {
+                  "name": "updateDiagnostic",
+                  "in": "body",
+                  "schema": {
+                    "$ref": "#/definitions/patientReq"
+                  }
+                }
+              ],
+              "responses": {
+                "200": {
+                  "description": "successful operation",
+                  "schema": {
+                    "$ref": "#/definitions/defaultResponse"
+                  }
+                },
+                "400": {
+                    "description": "Invalid status value",
+                    "schema": {
+                        "$ref": "#/definitions/InvalidResponse"
+                    }
+                }
+              }
+            }
+        },
 
         "/departments": {
             "get": {
+                "parameters": [
+                    {
+                    "name": "limit",
+                    "in": "query",
+                    "required": false,
+                    "type": "integer"
+                    },
+                    {
+                    "name": "pagination",
+                    "in": "query",
+                    "required": false,
+                    "type": "integer"
+                    }
+                ],
                 "tags": ["Departments"],
                 "produces": ["application/json"],
                 "security": [{ "Bearer": [] }],
@@ -740,6 +842,26 @@
 
         "/provines": {
             "get": {
+                "parameters": [
+                    {
+                    "name": "departmentId",
+                    "in": "query",
+                    "required": true,
+                    "type": "integer"
+                    },
+                    {
+                    "name": "limit",
+                    "in": "query",
+                    "required": false,
+                    "type": "integer"
+                    },
+                    {
+                    "name": "pagination",
+                    "in": "query",
+                    "required": false,
+                    "type": "integer"
+                    }
+                ],
                 "tags": ["Provinces"],
                 "security": [{ "Bearer": [] }],
                 "produces": ["application/json"],
@@ -765,6 +887,26 @@
 
         "/districts": {
             "get": {
+                "parameters": [
+                    {
+                    "name": "provinceId",
+                    "in": "query",
+                    "required": true,
+                    "type": "integer"
+                    },
+                    {
+                    "name": "limit",
+                    "in": "query",
+                    "required": false,
+                    "type": "integer"
+                    },
+                    {
+                    "name": "pagination",
+                    "in": "query",
+                    "required": false,
+                    "type": "integer"
+                    }
+                ],
                 "security": [{ "Bearer": [] }],
                 "tags": ["Districts"],
                 "produces": ["application/json"],
@@ -1018,20 +1160,16 @@
                 "name": {"type":"string"}
             }
         },
-        "patientReq": {
+        "patientReq":   {
             "type": "object",
             "properties": {
                 "firstName": {"type":"string"},
                 "lastName": {"type":"string"},
                 "documentNumber": {"type":"string"},
-                "birthDate": {"type":"date"},
+                "birthdate": {"type":"string"},
                 "address": {"type":"string"},
                 "gender": {"type":"string"},
-                "diagnostic": {"type":"string"},
-                "anamnesis": {"type":"string"},
-                "department": {"type":"string"},
-                "province": {"type":"string"},
-                "district": {"type":"string"}
+                "districtId": {"type":"string"}
             }
         },
         
@@ -1067,7 +1205,7 @@
                 "firstName": {"type":"string"},
                 "lastName": {"type":"string"},
                 "documentNumber": {"type":"string"},
-                "birthDate": {"type":"date"},
+                "birthdate": {"type":"date"},
                 "address": {"type":"string"},
                 "gender": {"type":"string"},
                 "diagnostic": {"type":"string"},
